--- a/LogSubmit/Views/Mailer/ThankYou.cshtml
+++ b/LogSubmit/Views/Mailer/ThankYou.cshtml
@@ -1,3 +1,3 @@
 
 Va multumim pentru participarea la Cupa Timisului 2015.
-Logurile primite vor aparea in cel mai scurt timp pe pagina  <a href="http://www.yo2kqt.ro/index.php?view=article&id=87">Loguri primite</a>. Daca dupa ca. 72 ore de la trimitere logul dvs. nu apare, va rugam sa ne contactati.
+Logurile primite vor aparea in cel mai scurt timp pe pagina  <a href="http://www.yo2kqt.ro/index.php?option=com_wrapper&view=wrapper&Itemid=83">Loguri primite</a>. Daca dupa ca. 72 ore de la trimitere logul dvs. nu apare, va rugam sa ne contactati.
